javadoc improvements